--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "loyaltylu/tcc-transaction",
+    "name": "bobma-awen/tcc-transaction",
     "authors": [
         {
-            "name": "luzhong",
-            "email": "979126035@qq.com"
+            "name": "maxiaowen1007@163.com",
+            "email": "maxiaowen881007"
         }
     ],
     "require": {
